# TUIMato

./: README.md  pyproject.toml
TUImato/: pomodoro_task_list  tuimato.py
TUImato/styling/: helpscreen.tcss  main.tcss
pomo/: pomo.py  pomo.tcss  pomodoro_task_list  settings.toml  utils.py
pomo/styling/: main.tcss  settingsscreen.tcss
